login_karyawan.html di kasih css nya

--- a/Karyawan/login.css
+++ b/Karyawan/login.css
@@ -48,7 +48,7 @@ span i {
     width: 200px;
     border-radius: 6px;
 }
-.login button{
+.input button{
     width: 140px;
     justify-content: center;
     align-items: center;
