--- a/Pemilik/piechart.css
+++ b/Pemilik/piechart.css
@@ -57,12 +57,16 @@ body {
 
 .chart-container {
     width: 100%;
-    height: 70%;
+    padding-bottom: 100%;
+    position: relative;
 }
 
 canvas {
     width: 100% !important;
     height: 100% !important;
+    position: absolute;
+    top: 0;
+    left: 0;
     border-radius: 20px;
 }
 
